[package]
name = "ai_wargame"
version = "0.5.14"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
cfg-if = "1.0.0"
derive_more = "0.99.17"
duplicate = "1.0.0"
enum-iterator = "1.4.0"
rand = "0.8.5"
regex = "1.7.3"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
debug = 0
codegen-units = 1

[features]
default = ["rand-actions", "board_map"]
#default = ["rand-actions", "board_array"]
#default = ["rand-actions", "board_vec"]
rand-actions = []
board_vec = []
board_array = []
board_map = []
