[package]
name = "ai_wargame"
version = "0.19.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
cfg-if = "1.0.0"
derive_more = "0.99.17"
duplicate = "1.0.0"
enum-iterator = "1.4.0"
getopts = "0.2.21"
instant = "0.1.12"
itertools = "0.10.5"
number_prefix = "0.4.0"
rand = "0.8.5"
rayon = { version = "1.7.0", optional = true }
regex = "1.7.4"
smart-default = "0.7.1"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
debug = 0
codegen-units = 1
# strip must be commented out to cross compile for mac
strip = true

[features]
default = ["board_vec", "stats", "rayon"]
board_vec = []
board_array = []
board_map = []
stats = []
