[package]
name = "ai_wargame"
version = "0.21.1"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
cfg-if = "1.0.0"
derive_more = "0.99.17"
duplicate = "1.0.0"
enum-iterator = "1.4.0"
getopts = "0.2.21"
instant = "0.1.12"
itertools = "0.10.5"
number_prefix = "0.4.0"
rand = "0.8.5"
rayon = { version = "1.7.0", optional = true }
regex = "1.7.4"
reqwest = { version = "0.11.17", features = ["blocking", "serde_json"], optional = true }
serde = { version = "1.0.163", features = ["derive"] , optional = true }
serde_json = { version = "1.0.96", optional = true }
smart-default = "0.7.1"
openssl-sys = { version = "*", optional = true }

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
lto = true
debug = 0
codegen-units = 1
# strip must be commented out to cross compile for mac
strip = true

[features]
default = ["base"]
console = ["base", "broker"]
web = ["base"]
wasi = ["base"]
base = ["board_vec", "stats"]
board_vec = []
board_array = []
board_map = []
stats = []
broker = ["serde", "serde_json", "reqwest"]
openssl-vendored = ["openssl-sys", "openssl-sys/vendored"]
